# bazel-minimal-rerun

./: .bazelrc  MODULE.bazel  README  README.md  WORKSPACE
.devcontainer/: devcontainer.json
examples/: BUILD  rerun_example.cpp
